--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,7 @@ jobs:
         command: [ "/bin/bash" ]
     steps:
       - checkout
-      - run: echo "A first hello from $USER"
+      - run: echo "A first hello from $PATH"
       - run:
           name: Python dependencies
           command: |
