--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ jobs:
   build:
     docker:
       - image: ubuntu:18.04
-        entrypoint: echo "Hellllllllloooooo"
+        entrypoint: "echo Hellllllllloooooo"
     steps:
       - checkout
       - run: echo "A first hello from $PATH"
