--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,8 +3,9 @@ jobs:
   build:
     docker:
       - image: ubuntu:18.04
-        entrypoint: "echo Hellllllllloooooo"
-        command: ["/bin/bash"]
+        #entrypoint:
+        #  - "echo Hellllllllloooooo"
+        #command: ["/bin/bash"]
     steps:
       - checkout
       - run: echo "A first hello from $PATH"
