Use custom image

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,10 +2,11 @@ version: 2
 jobs:
   build:
     docker:
-      - image: ubuntu:18.04
+      - image: robertodr/fuffa
         #entrypoint:
         #  - "echo Hellllllllloooooo"
         #command: ["/bin/bash"]
     steps:
       - checkout
       - run: echo "A first hello from $PATH"
+      - run: python3 --version
