--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,8 +3,8 @@ jobs:
   build:
     docker:
       - image: robertodr/fuffa
-        #entrypoint:
-        #  - "echo Hellllllllloooooo"
+        entrypoint:
+          - /opt/docker/bin/entrypoint
         #command: ["/bin/bash"]
     steps:
       - checkout
