You're one mean son of a gun

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,4 +8,5 @@ jobs:
       - run:
           name: Set up Intel env vars
           command: |
-            . /opt/intel/bin/compilervars.sh -arch intel64 -platform linux
+            source /opt/intel/bin/compilervars.sh -arch intel64 -platform linux
+            echo $MKLROOT
