What a... son of a gun

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,5 +8,6 @@ jobs:
       - run:
           name: Set up Intel env vars
           command: |
-            source /opt/intel/bin/compilervars.sh -arch intel64 -platform linux
+            echo 'source /opt/intel/bin/compilervars.sh -arch intel64 -platform linux' >> $BASH_ENV
+            source $BASH_ENV
             echo $MKLROOT
