What a... son of a gun

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,6 +8,7 @@ jobs:
       - run:
           name: Set up Intel env vars
           command: |
+            echo $USER
             echo 'export HATE="I HATE YOU"' >> $BASH_ENV
             #echo 'source /opt/intel/bin/compilervars.sh -arch intel64 -platform linux' >> $BASH_ENV
             source $BASH_ENV
